@@ -293,6 +293,9 @@ typedef const DPSESSIONDESC2* LPCDPSESSIONDESC2;
 #define DPSESSION_PASSWORDREQUIRED      0x00000400
 #define DPSESSION_MULTICASTSERVER       0x00000800
 #define DPSESSION_CLIENTSERVER          0x00001000
+#define DPSESSION_DIRECTPLAYPROTOCOL    0x00002000
+#define DPSESSION_NOPRESERVEORDER       0x00004000
+#define DPSESSION_OPTIMIZELATENCY       0x00008000
 
 typedef struct tagDPLCONNECTION
 {
@@ -1079,6 +1082,20 @@ DECLARE_INTERFACE_(IDirectPlay4,IDirectPlay3)
 /* DirectPlay::Connect */
 #define DPCONNECT_RETURNSTATUS  (DPENUMSESSIONS_RETURNSTATUS)
 
+/* DirectPlay::GetCaps and DirectPlay::GetPlayerCaps */
+#define DPCAPS_ISHOST                  0x00000002
+#define DPCAPS_GROUPOPTIMIZED          0x00000008
+#define DPCAPS_KEEPALIVEOPTIMIZED      0x00000010
+#define DPCAPS_GUARANTEEDOPTIMIZED     0x00000020
+#define DPCAPS_GUARANTEEDSUPPORTED     0x00000040
+#define DPCAPS_SIGNINGSUPPORTED        0x00000080
+#define DPCAPS_ENCRYPTIONSUPPORTED     0x00000100
+#define DPPLAYERCAPS_LOCAL             0x00000800
+#define DPCAPS_ASYNCCANCELSUPPORTED    0x00001000
+#define DPCAPS_ASYNCCANCELALLSUPPORTED 0x00002000
+#define DPCAPS_SENDTIMEOUTSUPPORTED    0x00004000
+#define DPCAPS_SENDPRIORITYSUPPORTED   0x00008000
+#define DPCAPS_ASYNCSUPPORTED          0x00010000
 
 /** DirectPlay system messages **/
 
